log/build_2023-02-13_22-04-10/dofsensor/stderr.log
  File "C:\dev\robotic_hw\install\Lib\site-packages\dofsensor\server.py", line 38
    rclpy.init(args**)
                     ^
SyntaxError: invalid syntax

